--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <img src="foreground.png" class="foreground" alt="foreground overlay">
 
     <!-- 着色器代码 -->
     <script type="x-shader/x-vertex" id="vertShader">
