--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
         void main () {
             vec3 C = texture2D(u_output_texture, vUv).rgb;
             float text = texture2D(u_text_texture, vec2(vUv.x, 1. - vUv.y)).r; 
-            vec3 color = vec3(1.) - C;
-            gl_FragColor = vec4(color, u_opacity);  // Use opacity here
+            gl_FragColor = vec4(vec3(1.) - C, 1.);
         }
     </script>
 
